<?xml version="1.0"?>
<package format="2">
  <name>otomo-camera</name>
  <version>0.1.0</version>
  <description>The otomo-camera package</description>

  <maintainer email="thomaswallis0@gmail.com">tom</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/TWALL9/otomo-camera</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>python3-opencv</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
